--- a/src/app/rec-page3/rec-page3.component.scss
+++ b/src/app/rec-page3/rec-page3.component.scss
@@ -67,7 +67,7 @@
       justify-content: center;
       align-items: center;
       width: 100%;
-      height: 100px;
+      height: auto;
       position: relative;
       margin-top: 20px;
 
